syntax = "proto3";

package genproto;

option go_package="genproto/user_service";
import "user.proto";

service RolesService {
    rpc Create(Role) returns (IdMessage) {}
    rpc RoleGetID(GetRequest) returns (GetResponse) {}
    rpc UpdateRole(UpdateList) returns (UpdateResponse) {}
    rpc DeleteRoleId(GetRequest) returns (Empty) {}
}
